# dsba-itop2022-hw

./: .gitignore  CMakeLists.txt  README.md  addcountrydialog.cpp  addcountrydialog.h  addcountrydialog.ui  countriesmodel.cpp  countriesmodel.h  country.cpp  countrydialog.cpp  countrydialog.h  countrymodel.cpp  countrymodel.h  csvparser.cpp  csvparser.h  datadialog.cpp  logowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ratingmodel.cpp  ratingmodel.h  region.cpp  region.h  regionmodel.cpp  regionmodel.h  watchlistdialog.cpp  watchlistdialog.h  watchlistdialog.ui  watchlistmodel.cpp  watchlistmodel.h
data/: dataset.csv
student#139/: countrymodel.cpp  csvparser.cpp  mainwindow.cpp  ratingmodel.cpp  regionmodel.h  watchlistdialog.cpp
student139/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  addcountrydialog.cpp  addcountrydialog.h  countriesmodel.cpp  countriesmodel.h  country.cpp  country.h  countrydialog.cpp  countrydialog.ui  countrymodel.cpp  countrymodel.h  csvparser.cpp  csvparser.h  datadialog.cpp  datadialog.h  datadialog.ui  logowidget.cpp  logowidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ratingmodel.cpp  ratingmodel.h  region.cpp  regionmodel.cpp  watchlistmodel.h
